<resources>
    <string name="app_name">Log-Em</string>
    <string name="txtTitle">Login</string>
    <string name="txtTitleDesc">Please Sign in to continue</string>
    <string name="editTxtEmailHint">Email</string>
    <string name="editTxtPasswordHint">Password</string>
    <string name="btnLogIn">LogIn</string>
    <string name="txtViewSignUp">Don\'t have an account?</string>
    <string name="btnMockSignUp">Sign up</string>
    <string name="txtViewCA">Create Account</string>
    <string name="editTxtFullNameHint">Full Name</string>
    <string name="txtViewLogIn">Already have an account?</string>
    <string name="rdBtnIsAdminTxt">Admin</string>
    <string name="btnMockLogIn">Log in</string>
    <string name="editTxtAdminCode">4 Digit Code</string>
    <string name="rdBtnAdminTxt">Admin</string>
    <string name="txtViewDesc">This is Admin landing page. Only admin have access to this page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello new fragment</string>
    <string name="x">Hello new on click fragment</string>
    <string name="editTxtDateHint">Date(MM/DD/YYYY)</string>
    <string name="title_activity_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="editTxtTitleHint">Subject</string>
    <string name="editTxtMessageHint">Message</string>
</resources>