<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/Background"
    android:backgroundTintMode="src_in"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/txtTitle"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/txtViewTitleDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/txtTitleDesc"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitle" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:foregroundTint="@color/white"
        android:foregroundTintMode="add"
        android:hint="@string/editTxtEmailHint"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitleDesc"
        app:layout_constraintVertical_bias="0.186" />

    <EditText
        android:id="@+id/editTxtPassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:foregroundTint="@color/white"
        android:foregroundTintMode="add"
        android:hint="@string/editTxtPasswordHint"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitleDesc"
        app:layout_constraintVertical_bias="0.417" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="serif"
        android:text="@string/btnLogIn"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPassword"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/txtViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/txtViewSignUp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnMockSignUp"
        android:layout_width="75dp"
        android:layout_height="32dp"
        android:layout_marginBottom="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="sans-serif"
        android:gravity="top|left"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btnMockSignUp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="normal|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>